force-app/main/default/objects/xAL_Address__c/xAL_Address__c.object-meta.xml
<CustomObject>
    <label>xAL Address</label>
    <nameField>
        <displayFormat>XAL-ADD-{0000}</displayFormat>
        <label>xAL Address Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>xAL Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>