force-app/main/default/objects/xAL_Address__c/fields/xAL_AdministrativeAreaName__c.field-meta.xml
<CustomField>
    <fullName>xAL_AdministrativeAreaName__c</fullName>
    <label>Administrative Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>