force-app/main/default/objects/xAL_Address__c/fields/xAL_DependentLocalityName__c.field-meta.xml
<CustomField>
    <fullName>xAL_DependentLocalityName__c</fullName>
    <label>Dependent Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>