force-app/main/default/objects/xAL_Address__c/fields/xAL_LocalityName__c.field-meta.xml
<CustomField>
    <fullName>xAL_LocalityName__c</fullName>
    <label>Locality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>