force-app/main/default/objects/xAL_Address__c/fields/xAL_SubAdministrativeAreaName__c.field-meta.xml
<CustomField>
    <fullName>xAL_SubAdministrativeAreaName__c</fullName>
    <label>SubAdministrative Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>