force-app/main/default/objects/xAL_Address__c/fields/xAL_TranslatedAdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>xAL_TranslatedAdministrativeArea__c</fullName>
    <label>xAL TranslatedAdministrativeArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>