force-app/main/default/objects/xAL_Address__c/fields/xAL_TranslatedSubAdministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>xAL_TranslatedSubAdministrativeArea__c</fullName>
    <label>xAL TranslatedSubAdministrativeArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>