force-app/main/default/objects/xAL_Address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>xAL_Country__c</columns>
    <columns>xAL_AdministrativeAreaName__c</columns>
    <columns>xAL_SubAdministrativeAreaName__c</columns>
    <columns>xAL_LocalityName__c</columns>
    <columns>xAL_TranslatedAdministrativeArea__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>xAL_Country__c</field>
        <operation>equals</operation>
        <value>Hong Kong</value>
    </filters>
    <label>All</label>
</ListView>