force-app/main/default/objects/xAL_Address__c/listViews/Otlob_Address.listView-meta.xml
<ListView>
    <fullName>Otlob_Address</fullName>
    <columns>NAME</columns>
    <columns>xAL_AdministrativeAreaName__c</columns>
    <columns>Code__c</columns>
    <columns>xAL_Country__c</columns>
    <columns>xAL_DependentLocalityName__c</columns>
    <columns>xAL_LocalityName__c</columns>
    <columns>xAL_SubAdministrativeAreaName__c</columns>
    <columns>Type__c</columns>
    <columns>xAL_TranslatedAdministrativeArea__c</columns>
    <columns>xAL_TranslatedSubAdministrativeArea__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>xAL_Country__c</field>
        <operation>equals</operation>
        <value>Egypt</value>
    </filters>
    <label>Otlob Address</label>
    <language>en_US</language>
    <sharedTo>
        <role>Global_Admin</role>
        <role>Global_Management</role>
    </sharedTo>
</ListView>